Hotfix: stop stretching the thumbnails in the comments index

--- a/src/scss/modules/_thumbnail-enhancer.scss
+++ b/src/scss/modules/_thumbnail-enhancer.scss
@@ -136,7 +136,8 @@ div#c-comments {
 
     article.post-preview img,
     div.post-preview img {
-        width: 150px;
+        max-width: 150px;
+        max-height: 250px;
     }
 }
 
